--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -56,20 +56,20 @@
           </ul>
           <ul class="nav nav-sidebar">
             <li><a href="/QueryPerf">Query Performance</a></li>
-            <li ><a href="/dbsize">Database Size </a></li>
+          
             <li><a href="/tablespacedetail">Table Space Usage</a></li>
-            <li ><a href="/users">Database Users </a></li>
+         
             <li ><a href="/servermemorybydb">Memory Usage by Database </a></li>
-            <li ><a href="/backuphistory">Backup History </a></li>  
+          
             <li ><a href="/customer">Customer (RUD)</a></li>
           </ul>
         </div>
 
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Insights MSSQL TestOUT
+          <h1 class="page-header">Insights Azure SQL TestOUT
           <span class="text-muted"> 
-            <h4> MSSQL 2019/2019 Linux Showcase DEMO WebApp : build NODE JS 10.X </h4>
-            <h5> MSSQL Server IP:<b><%=server%></b> | DB:<b><%=database%></b> | DB user:<b><%=user%></b> </h5>
+            <h4> Azure SQL Showcase DEMO WebApp : build NODE JS 10.X </h4>
+            <h5> Azure SQL Server/IP:<b><%=server%></b> | DB:<b><%=database%></b> | DB user:<b><%=user%></b> </h5>
             <h5> WEB APP Machine/Container name :<b><%=sakura%></b> </h5>
             <h5> SQL Machine/Container name :<b> <%=mazda%>  </b> </h5>
             <h5> SQL @@VERSION out :<b> <%=v8%>  </b> </h5>
