--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -66,7 +66,7 @@
         </div>
 
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Insights Azure SQL TestOUT
+          <h1 class="page-header">SecDev Update v7 
           <span class="text-muted"> 
             <h4> Azure SQL Showcase DEMO WebApp : build NODE JS 10.X </h4>
             <h5> Azure SQL Server/IP:<b><%=server%></b> | DB:<b><%=database%></b> | DB user:<b><%=user%></b> </h5>
